--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -233,6 +233,7 @@
                             {{if not .Namespaces}}
                             <option value="">No namespaces</option>
                             {{else}}
+                            <option value="" {{if eq $.CurrentNS ""}}selected{{end}}>All Namespaces</option>
                             {{range .Namespaces}}
                             <option value="{{.Namespace}}" {{if eq $.CurrentNS .Namespace}}selected{{end}}>{{.Namespace}}</option>
                             {{end}}
